JDK 8u adjustments for CamerfirmaTLSPolicy